src/test/ui/fmt/issue-104142.rs
fn main() {
    println!(
        r#"
    \"\'}､"# //~ ERROR invalid format string: unmatched `}` found
    );
}
